5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1596_2894.log
== TEST (2019-04-02 15:39:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("8*100"))

# Calculo do valor a ser pago, incluindo o frete:
total = "845"

# Impressao do valor total:
print("845.0")
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:39:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = (input("8*100"))

# Calculo do valor a ser pago, incluindo o frete:
total = "845"

# Impressao do valor total:
print("845.0")
-- ERROR:
File "XXXX", line 5
    ????? = (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:39:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entrad(input("8*100"))

# Calculo do valor a ser pago, incluindo o frete:
total = "845"

# Impressao do valor total:
print("845.0")
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:39:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entrad(input("8*100"))

# Calculo do valor a ser pago, incluindo o frete:
total = "845"

# Impressao do valor total:
print("845.0")
-- EXECUTION TIME:
0.188619
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:39:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entrad(input("8*100"))

# Calculo do valor a ser pago, incluindo o frete:
total = "845"

# Impressao do valor total:
print("845.0")
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:42:57) 
-- CODE:
valor_do_jogo=float(input("Qual o valor unitario do jogo?"))
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:44:00) 
-- CODE:
valor_do_jogo=float(input("Qual o valor unitario do jogo?"))
total=valor_do_jogo1 * 8 + valor_do_frete
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:44:18) 
-- CODE:
valor_do_jogo=float(input("Qual o valor unitario do jogo?"))
total=valor_do_jogo1 * 8 + valor_do_frete
print (total)
-- EXECUTION TIME:
0.155397
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:44:43) 
-- CODE:
valor_do_jogo=float(input("Qual o valor unitario do jogo?"))
total=valor_do_jogo1 * 8 + valor_do_frete
print (tota1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:45:21) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo? "))
total=valor_do_jogo1 * 8 + valor_do_frete
print (tota1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:45:30) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo? "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:45:50) 
-- CODE:
valor_do_jogo= float(input("845.0 "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:45:52) 
-- CODE:
valor_do_jogo= float(input("845.0 "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- EXECUTION TIME:
0.149458
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:46:11) 
-- CODE:
valor_do_jogo= float(input("Qual o valor total do jogo? "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:46:14) 
-- CODE:
valor_do_jogo= float(input("Qual o valor total do jogo? "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- EXECUTION TIME:
0.192325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:46:35) 
-- CODE:
valor_do_jogo= float(input("Qual o valor total do jogo? "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- EXECUTION TIME:
0.152506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:46:38) 
-- CODE:
valor_do_jogo= float(input("Qual o valor total do jogo? "))
total=valor_do_jogo1 * 8 + valor_do_frete
print(tota1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total=valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
